--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,68 @@
-#root {
-  max-width: 1280px;
+
+.App {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+h1 {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 8px;
+  text-decoration: underline;
+}
+
+.Grid {
+  border: 2px solid black;
+  background-color: darkgoldenrod;
+  border-radius: 3%;
+  padding: 12px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  justify-items: center;
+  align-items: stretch;
+  gap: 3%;
   margin: 0 auto;
+  width: 30%;
+  height: 50%;
+  perspective: 100%;
+  max-width: 100%;
+}
+
+span {
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.PM {
+  width: 360px;
+  position: relative;
+  margin: 0 auto;
+  padding: 10px 4px;
+  margin-top: 10px;
+}
+.Puntuaje {
+  justify-content: center;
+  text-align: center;
+  overflow-wrap:anywhere;
+  display: flex;
+  border: 2px solid;
+  border-radius: 30%;
+  max-width: 45%;
+  margin: auto;
+  padding: 8px;
+  background-color: lavenderblush;
+}
+
+.restart {
+  display: flex;
+  justify-content: center;
+}
+
+.Fin{
   text-align: center;
 }
-
-.Grid{
-  display: grid;
-  margin: auto;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(4, 25%);
-  background-color: gray;
-  max-width: 450px;
-  border: 2px solid;
-}
-
-.Contador{
-  margin-top: -500px;
-  margin-left: 900px;
-  border: 1px solid;
-  padding: 5px;
-  max-width: 150px;
-  border-radius: 40px;
-  background-color: blanchedalmond;
-}
-
-h3{
-  font-style: bold;
-  text-decoration: underline 2px;
-}
-h4{
-  color: rgb(68, 66, 66);
-  font-size: large;
-  border: 2px solid;
-  border-radius: 100px;
-  max-width: 25px;
-  margin: auto;
-  padding: 10px;
-}
-
-.Reset{
-  margin-left: 680px;
-  margin-top: 10px;
+.Fin > h2{
+  font-size: 21px;
 }
