--- a/src/Component/Card/Card.css
+++ b/src/Component/Card/Card.css
@@ -1,5 +1,36 @@
-.Carta {
-    max-height: 125px;
-    margin: auto;
-    padding: 5px;
+.carta {
+    width: 100%;
+    height: 100%;
+    box-shadow: 2px 2px 3px 3px darkgray;
+    transition: 0.4s;
+    transform-style: preserve-3d;
+    position: relative;
+    cursor: pointer;
+    z-index: 500;
 }
+.carta:hover{
+    border-color: gold;
+    border: 1px solid;
+}
+.carta img {
+    width: 100%;
+    height: 100%;
+}
+.carta .cara {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.carta .cara.frontal {
+    transform: rotateY(180deg);
+}
+.carta.Volteado {
+    transform: rotateY(180deg);
+}
+.carta.Activo {
+    opacity: 0;
+}
+
+
+
